# best-practices-workshops

./: .gitignore  README.md  pyproject.toml
problems/: problem_base.py  quadratic.py  rosenbrock.py
results/csv/: gradient_descent_lr0.001_rosenbrock_dim2_500iters.csv  gradient_descent_lr0.01_quadratic_dim2_A2.0_b1.0_100iters.csv  gradient_descent_lr0.01_quadratic_dim2_A20.0_b1.0_100iters.csv  heavy_ball_lr0.001_m0.5_rosenbrock_dim2_500iters.csv  heavy_ball_lr0.001_m0.9_rosenbrock_dim2_500iters.csv  heavy_ball_lr0.01_m0.5_quadratic_dim2_A2.0_b1.0_100iters.csv  heavy_ball_lr0.01_m0.5_quadratic_dim2_A20.0_b1.0_100iters.csv  heavy_ball_lr0.01_m0.9_quadratic_dim2_A2.0_b1.0_100iters.csv  heavy_ball_lr0.01_m0.9_quadratic_dim2_A20.0_b1.0_100iters.csv
scripts/: compare_methods.py  plotting.py  run_benchmark.py  run_experiments.sh
src/: benchmark.py  gradient_descent.py  heavy_ball.py  optimizer_base.py  utils.py
test/: conftest.py  test_benchmark.py  test_optimizers.py  test_problems.py
